authorization description changed

--- a/info.yaml
+++ b/info.yaml
@@ -17,23 +17,40 @@ description: |
      * Запросы. Облако гарантирует доставку вебхуков этого типа и ожидает подтверждения действия от стороннего сервиса. Например, при регистрации новой или авторизации существующей учётной записи.
 
    # Авторизация
-   Запросы стороннего сервера к REST API, облако Эвотор авторизует с помощью **токена приложения**. Вебхуки облака сторонний сервис авторизует с помощью **токена стороннего сервиса** и **токена пользователя**.
 
-   ## Токен приложения
-   Облако присваивает токен приложения каждому установленному приложению и с его помощью определяет в рамках какого пользователя действуют запросы стороннего сервиса. При запросе к REST API Облака Эвотор, например, для получения списка товаров или магазинов пользователя, сторонний сервис передаёт *токен приложения* в заголовке `X-Authorization`.
+   Запросы стороннего сервиса к REST API, Облако Эвотор авторизует с помощью **токена Облака Эвотор**.
 
-   Информацию о том, как получить токен приложения, [смотрите в документации](https://developer.evotor.ru/docs/doc_authorization.html).
+   Вебхуки Облака сторонний сервис авторизует с помощью токенов стороннего сервиса: **токена приложения стороннего сервиса** и **токена пользователя стороннего сервиса**.
 
-   ## Токен стороннего сервиса
-   *Токен стороннего сервиса* необходим для авторизации вебхуков-запросов. В зависимости от способа авторизации, вебхуки-запросы к стороннему сервису содержат заголовок `Authorization` с типом `Basic` или `Bearer`:
+   ## Токен Облака Эвотор
 
-     * Если сторонний сервис поддерживает авторизацию с типом `Basic`, в Эвотор требуется предоставить имя пользователя и пароль в формате `username:password`. Вы можете сделать это на вкладке **Интеграция** вашего приложения, на сайте [dev.evotor.ru](https://dev.evotor.ru).
+   Чтобы авторизовать запросы своего сервиса к Облаку Эвотор, в запросе требуется передать заголовок `X-Authorization`, который содержит токен Облака Эвотор.
 
-     * Если сторонний сервис поддерживает авторизацию с типом `Bearer`, в Эвотор требуется предоставить токен в формате `string`. Вы можете сделать это на вкладке **Интеграция** вашего приложения, на сайте [dev.evotor.ru](https://dev.evotor.ru).
+   Вы можете получить токен Облака Эвотор одним из спообов, [описанных в документации](https://developer.evotor.ru/docs/doc_authorization.html).
 
-   В ответ на вебхуки [**[POST] Авторизация пользователя**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1verify%2Fpost), [**[POST] Регистрация учётной записи**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1create%2Fpost) и [**[POST] Активация / деактивация тарифа**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1tariff%2Fpost), сторонний сервис сообщает облаку Эвотор *токен пользователя*, который необходим, чтобы авторизовать все остальные вебхуки Эвотора.
+   Разделы с запросами к Облаку, в которых требуется передавать заголовок `X-Authorization`:
 
-   Сторонний веб-сервис также может обращаться в облако Эвотор за дополнительной информацией. Токен для авторизации таких запросов Эвотор передаёт в вебхуке  [**[POST] Передача токена приложения**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1token%2Fpost).
+   * Запросы раздела **Сущности пользователя Эвотор**.
+   * Запросы раздела **Товары и документы**.
+   * Запросы раздела **Схемы и дополнительные поля товаров**.
+
+   ## Токены стороннего сервиса
+
+   Чтобы авторизовать запросы к вашему сервису, Облаку Эвотор необходимы токены стороннего сервиса. *Токен приложения стороннего сервиса* вы указываете на [сайте разработчиков](https://dev.evotor.ru) в соответствующих параметрах; *токен пользователя приложения стороннего сервиса* ваш сервис должен передавать автоматически после того как пользователь Эвотор установит ваше приложение с помощью [Магазина приложений](https://market.evotor.ru) и зарегистрируется или авторизуется в вашем сервисе.
+
+   В зависимости от запроса, Облако передаёт один из токенов в заголовке `Authorization`.
+
+   ### Токен приложения стороннего сервиса
+
+   Токен приложения стороннего сервиса вы задаёте вручную на вкладке **Интеграция** во время настройки своего приложения на [сайте разработчиков](https://dev.evotor.ru).
+
+   Подробная информация о том как задать токен приложения стороннего сервиса [представлена в документации](https://developer.evotor.ru/docs/doc_evotor_api_authorization.html#serverToken).
+
+   ### Токен пользователя приложения стороннего сервиса
+
+   Токен пользователя приложения стороннего сервиса Облако Эвотор получает от вашего сервиса в ответ на вебхуки [**[POST] Авторизация пользователя**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1verify%2Fpost), [**[POST] Регистрация учётной записи**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1create%2Fpost) и [**[POST] Активация / деактивация тарифа**](https://api.evotor.ru/docs/#tag/Vebhuki-zaprosy%2Fpaths%2F~1partner.ru~1api~1v1~1user~1tariff%2Fpost). Облако передаёт этот токен во всех вебхуках, кроме указанных выше.
+
+   Подробная информация о получении токена пользователя приложения стороннего сервиса [представлена в документации](https://developer.evotor.ru/docs/doc_evotor_api_authorization.html#usersToken).
 
    # Ограничения
 
