token name corrected

--- a/paths.yaml
+++ b/paths.yaml
@@ -886,9 +886,9 @@
   post:
     tags:
       - Вебхуки-запросы
-    summary: 'Передача токена приложения'
+    summary: 'Передача токена Облака Эвотор'
     description: |
-      Передаёт токен приложения, после того, как пользователь установил приложение в Личном кабинете. Сторонний сервис использует токен приложения для авторизации запросов к облаку Эвотор.
+      Передаёт токен Облака Эвотор, после того, как пользователь установил приложение в Личном кабинете. Сторонний сервис использует токен Облака Эвотор для авторизации запросов к Облаку Эвотор.
     parameters:
       - $ref: ./parameters.yaml#/serverAuth
       - $ref: ./parameters.yaml#/Accept
