--- a/paths.yaml
+++ b/paths.yaml
@@ -793,7 +793,7 @@
       - Вебхуки-уведомления
     summary: 'Создать магазин'
     description: >-
-      Создать / отредактировать однин или несколько магазинов в стороннем сервисе. Облако эвотор передаёт в сторонний сервис все изменения, сделанные в Личном кабинете. Эвотор является мастер-системой по данной сущности.
+      Создать / отредактировать один или несколько магазинов в стороннем сервисе. Облако эвотор передаёт в сторонний сервис все изменения, сделанные в Личном кабинете. Эвотор является мастер-системой по данной сущности.
 
       Ожидает от стороннего сервиса ответа `200 ОК`. Если ответ не приходит в течение 10 секунд, Облако отправляет уведомление повторно.
     parameters:
