--- a/paths.yaml
+++ b/paths.yaml
@@ -718,7 +718,7 @@
   put:
     tags:
       - Вебхуки-уведомления
-    summary: 'Создать смарт-терминал'
+    summary: 'Создан смарт-терминал'
     description: |
       Создать / отредактировать один или несколько смарт-терминалов в стороннем сервисе. Облако эвотор передаёт в сторонний сервис все изменения, сделанные в Личном кабинете. Эвотор является мастер-системой по данной сущности.
 
@@ -733,7 +733,7 @@
         schema:
           type: array
           items:
-            $ref: ./definitions.yaml#/device
+            $ref: ./definitions.yaml#/deviceWithoutCode
     responses:
       '200':
         description: OK
@@ -753,7 +753,7 @@
   put:
     tags:
       - Вебхуки-уведомления
-    summary: 'Создать сотрудника'
+    summary: 'Создан сотрудник'
     description: |
       Создать / отредактировать одного или нескольких сотрудников в стороннем сервисе. Облако эвотор передаёт в сторонний сервис все изменения, сделанные в Личном кабинете. Эвотор является мастер-системой по данной сущности.
 
@@ -768,7 +768,7 @@
         schema:
           type: array
           items:
-            $ref: ./definitions.yaml#/employee
+            $ref: ./definitions.yaml#/employeeWithoutCode
     responses:
       '200':
         description: OK
@@ -788,7 +788,7 @@
   put:
     tags:
       - Вебхуки-уведомления
-    summary: 'Создать магазин'
+    summary: 'Создан магазин'
     description: >-
       Создать / отредактировать один или несколько магазинов в стороннем сервисе. Облако эвотор передаёт в сторонний сервис все изменения, сделанные в Личном кабинете. Эвотор является мастер-системой по данной сущности.
 
@@ -803,7 +803,7 @@
         schema:
           type: array
           items:
-            $ref: ./definitions.yaml#/store
+            $ref: ./definitions.yaml#/storeWithoutCode
     responses:
       '200':
         description: OK
