--- a/paths.yaml
+++ b/paths.yaml
@@ -483,6 +483,88 @@
          items:
            $ref: ./definitions.yaml#/document
 
+/api.evotor.ru/api/v2/inventories/stores/{storeUuid}/documents:
+ x-summary: Документы
+ get:
+   tags:
+     - Товары и документы
+   summary: 'Получить список документов [V2]'
+   description: |
+     Возвращает массив документов.
+   parameters:
+     - $ref: ./parameters.yaml#/auth
+     - $ref: ./parameters.yaml#/storeUuid
+     - $ref: ./parameters.yaml#/Content-Type
+     - name: deviceUuid
+       in: query
+       type: string
+       description: |
+         Идентификатор устройства в Облаке Эвотор.
+
+         Формат – `uuid4`. Регистрозависимый.
+     - name: ltCloseDate
+       in: query
+       format: date-time
+       type: string
+       description: |
+         Дата окончания выборки. Ответ содержит документы, созданные до указанной даты.
+
+         Если не заданы даты начала и окончания выборки, возвращаются документы созданные за последний месяц с текущей даты.
+
+         Для выгрузки доступны документы, созданные не более шести месяцев назад, с момента выполнения запроса. Диапазон дат (от `gtCloseDate` до `ltCloseDate`) в рамках одного запроса не может превышать один месяц.
+
+         Формат времени - 2017-01-10T09:33:19.757+0000
+     - name: gtCloseDate
+       in: query
+       format: date-time
+       type: string
+       description: |
+         Дата начала выборки. Ответ содержит документы, созданные после указанной даты.
+
+         Если не заданы даты начала и окончания выборки, возвращаются документы созданные за последний месяц с текущей даты.
+
+         Для выгрузки доступны документы, созданные не более шести месяцев назад, с момента выполнения запроса. Диапазон дат (от `gtCloseDate` до `ltCloseDate`) в рамках одного запроса не может превышать один месяц.
+
+         Формат времени - 2017-01-10T09:33:19.757+0000
+     - name: types
+       description: |
+         Ответ будет содержать документы определенных типов. Можно указать несколько типов через запятую. Возможные значения:
+         * Кассовые документы – `SELL`,`PAYBACK`,`CASH_INCOME`,`CASH_OUTCOME`,`OPEN_SESSION`,`FPRINT`,`CLOSE_SESSION`.
+         * Инвентаризация – `INVENTORY`;
+         * Приемка – `ACCEPT`;
+         * Возврат поставщику – `RETURN`;
+         * Списание – `WRITE_OFF`;
+         * Акт переоценки – `REVALUATION`;
+         * Вскрытие тары – `OPEN_TARE`.
+       in: query
+       type: string
+   responses:
+     '200':
+       description: OK
+       headers:
+         Warning:
+           description: |
+             URL будет отключён после <время отключения URL>.
+             > Заголовок добавляется к ответу сервера за несколько недель до отключения URL.
+         X-RateLimit-Limit:
+           schema:
+             type: integer
+           description: Максимальное количество запросов, которые вы можете сделать в текущем временном интервале.
+         X-RateLimit-Remaining:
+           schema:
+             type: integer
+           description: Количество запросов, оставшихся в текущем временном интервале.
+         X-RateLimit-Reset:
+           schema:
+             type: string
+             format: integer
+           description: Время, оставшееся до начала нового временного интервала. В секундах UTC.
+       schema:
+         title: Массив документов
+         type: array
+         items:
+           $ref: ./definitions.yaml#/document2
+
 /partner.ru/api/v1/inventories/stores/{storeUuid}/documents:
  put:
    tags:
