--- a/paths.yaml
+++ b/paths.yaml
@@ -8,7 +8,7 @@
      Возвращает массив с информацией о всех магазинах пользователя.
    parameters:
      - $ref: ./parameters.yaml#/auth
-     - $ref: ./parameters.yaml#/Content-Type
+#     - $ref: ./parameters.yaml#/Content-Type
    responses:
      '200':
        description: OK
@@ -89,7 +89,7 @@
      Возвращает массив с информацией о всех смарт-терминалах пользователя.
    parameters:
      - $ref: ./parameters.yaml#/auth
-     - $ref: ./parameters.yaml#/Content-Type
+#     - $ref: ./parameters.yaml#/Content-Type
    responses:
      '200':
        description: OK
@@ -131,7 +131,7 @@
    parameters:
      - $ref: ./parameters.yaml#/auth
      - $ref: ./parameters.yaml#/storeUuid
-     - $ref: ./parameters.yaml#/Content-Type
+#     - $ref: ./parameters.yaml#/Content-Type
    responses:
      '200':
        description: OK
@@ -205,7 +205,7 @@
      > С 1.11.2017 Облако перестанет обрабатывать запросы содержащие некорректную схему товаров. Вы по-прежнему сможете получить из Облака ранее созданные товары с некорректной схемой.
    parameters:
      - $ref: ./parameters.yaml#/auth
-#     - $ref: ./parameters.yaml#/contentType
+     - $ref: ./parameters.yaml#/contentType
      - $ref: ./parameters.yaml#/storeUuid
      - name: products
        in: body
@@ -366,7 +366,7 @@
      Чтобы удалить определённый товар, в теле HTTP-запроса требуется указать его UUID.
    parameters:
      - $ref: ./parameters.yaml#/auth
-#     - $ref: ./parameters.yaml#/contentType
+     - $ref: ./parameters.yaml#/contentType
      - $ref: ./parameters.yaml#/storeUuid
      - name: products
        in: body
@@ -412,7 +412,7 @@
    parameters:
      - $ref: ./parameters.yaml#/auth
      - $ref: ./parameters.yaml#/storeUuid
-     - $ref: ./parameters.yaml#/Content-Type
+#     - $ref: ./parameters.yaml#/Content-Type
      - name: deviceUuid
        in: query
        type: string
@@ -494,7 +494,7 @@
    parameters:
      - $ref: ./parameters.yaml#/auth
      - $ref: ./parameters.yaml#/storeUuid
-     - $ref: ./parameters.yaml#/Content-Type
+#     - $ref: ./parameters.yaml#/Content-Type
      - name: deviceUuid
        in: query
        type: string
@@ -577,7 +577,7 @@
    parameters:
      - $ref: ./parameters.yaml#/clientAuth
      - $ref: ./parameters.yaml#/storeUuid
-#     - $ref: ./parameters.yaml#/contentType
+     - $ref: ./parameters.yaml#/contentType
      - name: documents
        in: body
        description: Массив документов
@@ -772,7 +772,7 @@
       Возвращает объект с информацией о товаре, найденном в базе стороннего сервиса с помощью штрихкода и/или кода алкогольной продукции.
     parameters:
       - $ref: ./parameters.yaml#/clientAuth
-      - $ref: ./parameters.yaml#/Content-Type
+#      - $ref: ./parameters.yaml#/Content-Type
       - name: scanCode
         in: query
         required: true
@@ -1042,7 +1042,7 @@
         Интервал повторной отправки события около одной минуты.
     parameters:
       - $ref: ./parameters.yaml#/clientAuth
-#      - $ref: ./parameters.yaml#/contentType
+      - $ref: ./parameters.yaml#/contentType
       - $ref: ./parameters.yaml#/Accept
       - $ref: ./parameters.yaml#/Accept-Charset
       - name: body
@@ -1065,7 +1065,7 @@
     description: |
         Возвращает схемы товаров для определённого магазина (`{storeUuid}`) пользователя платформы. Эвотор возвращает схемы в соответствии с приложением, создавшим схемы. Эвотор определяет приложение по токену, который сторонний сервис передаёт в заголовке `X-Authorization`.
     parameters:
-      - $ref: ./parameters.yaml#/Content-Type
+#      - $ref: ./parameters.yaml#/Content-Type
       - $ref: ./parameters.yaml#/auth
     responses:
       '200':
@@ -1103,7 +1103,7 @@
     description: |
       Создаёт / изменяет схемы товаров для определённого магазина (`{storeUuid}`) пользователя платформы. Эвотор создаёт схему в рамках приложения. Эвотор определяет приложение по токену, который сторонний сервис передаёт в заголовке `X-Authorization`.
     parameters:
-#      - $ref: ./parameters.yaml#/contentType
+      - $ref: ./parameters.yaml#/contentType
       - $ref: ./parameters.yaml#/auth
       - name: schemas
         in: body
@@ -1173,7 +1173,7 @@
      В теле запроса укажите один или несколько идентификаторов схем, которые требуется удалить.
 
    parameters:
-#     - $ref: ./parameters.yaml#/contentType
+     - $ref: ./parameters.yaml#/contentType
      - $ref: ./parameters.yaml#/auth
      - $ref: ./parameters.yaml#/storeUuid
      - name: schemas
@@ -1231,7 +1231,7 @@
     parameters:
       - $ref: ./parameters.yaml#/auth
       - $ref: ./parameters.yaml#/storeUuid
-      - $ref: ./parameters.yaml#/Content-Type
+#      - $ref: ./parameters.yaml#/Content-Type
     responses:
       '200':
         description: OK
@@ -1271,7 +1271,7 @@
       Загружает информацию об одном или нескольких товарах в определённый магазин (`{storeUuid}`) пользователя платформы.
     parameters:
       - $ref: ./parameters.yaml#/auth
-#      - $ref: ./parameters.yaml#/contentType
+      - $ref: ./parameters.yaml#/contentType
       - $ref: ./parameters.yaml#/storeUuid
       - name: extras
         in: body
@@ -1320,7 +1320,7 @@
      В теле запроса укажите один или несколько идентификаторов дополнительных полей, которые требуется удалить.
 
    parameters:
-#     - $ref: ./parameters.yaml#/contentType
+     - $ref: ./parameters.yaml#/contentType
      - $ref: ./parameters.yaml#/auth
      - $ref: ./parameters.yaml#/storeUuid
      - name: extras
@@ -1395,7 +1395,7 @@
     parameters:
       - $ref: ./parameters.yaml#/auth
       - $ref: ./parameters.yaml#/storeUuid
-#      - $ref: ./parameters.yaml#/contentType
+      - $ref: ./parameters.yaml#/contentType
       - name: ''
         in: body
         description: JSON-объект, в котором требуется указать пары идентификатор продукта - остатки. Остатки можно указывать как в виде целых так и дробных чисел.
@@ -1448,7 +1448,7 @@
       Возвращает массив с информацией о всех магазинах пользователя, которые зарегистрированы в ОФД.
     parameters:
       - $ref: ./parameters.yaml#/auth
-      - $ref: ./parameters.yaml#/Content-Type
+#      - $ref: ./parameters.yaml#/Content-Type
     responses:
       '200':
         description: OK
@@ -1522,7 +1522,7 @@
       Возвращает массив с информацией о всех устройствах пользователя, которые зарегистрированы в ОФД.
     parameters:
       - $ref: ./parameters.yaml#/auth
-      - $ref: ./parameters.yaml#/Content-Type
+#      - $ref: ./parameters.yaml#/Content-Type
     responses:
       '200':
         description: OK
@@ -1600,7 +1600,7 @@
       Возвращает массив с информацией о документах переданных в ОФД в заданный период. Вы можете указать тип необходимых документов.
     parameters:
       - $ref: ./parameters.yaml#/auth
-      - $ref: ./parameters.yaml#/Content-Type
+#      - $ref: ./parameters.yaml#/Content-Type
       - name: storeId
         in: query
         type: string
